# QuickFlux

./: .gitignore  README.md  SECURITY.md  catalog-info.yaml  magnetic_field_3_phase_helix_v2.ipynb
backend/: README.md  pyproject.toml  run_api.py
backend/src/quick_flux/: single_core_cables_in_ground.py
backend/src/quick_flux/api/: __init__.py  app.py
backend/src/quick_flux/models/: magnetic_field_input.py
backend/tests/: test_build.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  MagneticFieldPage.tsx
frontend/src/Components/: FieldPlot.tsx  MagneticFieldInput.tsx  MagneticFluxDensityGraph.tsx  TrenchLayout.tsx
frontend/src/Models/: MagneticFieldInputDto.ts  MagneticFieldResponseDto.ts
frontend/src/Utils/: Icons.tsx  InputUtils.tsx
